bad/bin_op_or_string_void.example_compiler_output
ERROR
[1mbad/bin_op_or_string_void.lat:4:5: [1;31merror: [0;1moperator || is defined only for `boolean` values, not `string` and `void`[m
	"" || foo();
	   [1;32m^[m
